--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,10 +11,16 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.0",
+    "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.1.3",
+    "sass": "^1.51.0",
     "typescript": "^4.6.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +48,10 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.6.2"
+    "@types/uuid": "^8.3.4",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
+    "prettier": "2.6.2",
+    "tailwindcss": "^3.0.24"
   }
 }
