--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.1.3",
     "sass": "^1.51.0",
