--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "firebase": "^9.8.1",
     "i18next": "^21.8.0",
     "rc-slider": "^10.0.0",
