--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,13 +18,13 @@ ENV REACT_APP_FIREBASE_AUTH_DOMAIN=<auth-domain>
 
 ENV REACT_APP_FIREBASE_PROJECT_ID=<project-id>
 
-ENV REACT_APP_FIREBASE_STORAGE_BUCKET=<store-bucket>
+ENV REACT_APP_FIREBASE_STORAGE_BUCKET=<storage-bucket>
 
 ENV REACT_APP_FIREBASE_MESSAGING_SENDER_ID=<sender-id>
 
 ENV REACT_APP_FIREBASE_APP_ID=<app-id>
 
-ENV REACT_APP_FIREBASE_MEASUREMENT_ID=<mesurement-id>
+ENV REACT_APP_FIREBASE_MEASUREMENT_ID=<measurement-id>
 
 EXPOSE 3000
 
