--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,9 +28,11 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.1",
     "redux-saga": "^1.1.3",
     "sass": "^1.51.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.6.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
