--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.1",
+    "redux-first-history": "^5.0.9",
     "redux-saga": "^1.1.3",
     "sass": "^1.51.0",
     "slick-carousel": "^1.8.1",
