--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.8.1",
     "i18next": "^21.8.0",
+    "image-map": "^2.0.1",
     "rc-slider": "^10.0.0",
     "react": "^18.1.0",
     "react-dnd": "^16.0.1",
