--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,8 @@ ENV PORT=8000
 
 ENV NODE_ENV=production
 
+ENV DATABASE_URI=mongodb+srv://<username>:<password>@<cluster-url>/<database-name>
+
 EXPOSE 8000
 
 CMD ["node", "dist/src/main.js"]
