fix: git ignore

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -15,8 +15,9 @@ lerna-debug.log*
 .DS_Store
 src/common/envs
 .env
-.env.development
-.env.production
+.test.env
+.development.env
+.production.env
 
 # Tests
 /coverage
